...
                    IconButton(onClick = {
                        onThemeUpdated()
                    }) {
                        if (darkTheme) {
                            Icon(
                                painter = painterResource(id = R.drawable.sun),
                                contentDescription = "Sun Icon",
                                modifier = Modifier.size(24.dp)
                            )
                        } else {
                            Icon(
                                painter = painterResource(id = R.drawable.moon),
                                contentDescription = "Moon Icon",
                                modifier = Modifier.size(24.dp)
                            )
                        }
                    }
                }
            )
...
