...
                Spacer(modifier = Modifier.size(8.dp))
                IconButton(onClick = {
                    onFavoriteClick(character)
                }) {
                    Icon(
                        imageVector = if (character.isFavorite) Icons.Default.Favorite else Icons.Default.FavoriteBorder,
                        contentDescription = if (character.isFavorite) "Favorite" else "Not Favorite",
                        modifier = Modifier.testTag("FavoriteIcon_${character.name}")
                    )
                }
            }
        }
    }
...
